# isatomic

./: CMakeLists.txt  README.md
src/: isatomic.cpp
